Remove named integers in l3packages

--- a/l3packages/xparse/xparse.dtx
+++ b/l3packages/xparse/xparse.dtx
@@ -2201,7 +2201,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_flush_m_args:
   {
-    \int_compare:nNnT \l_@@_m_args_int > \c_zero
+    \int_compare:nNnT \l_@@_m_args_int > 0
       {
         \tl_put_right:Nx \l_@@_signature_tl
           { \exp_not:c { @@_grab_m_ \int_use:N \l_@@_m_args_int :w } }
@@ -2244,7 +2244,7 @@
           {
             @@_grab_ #1
             \bool_if:NT \l_@@_long_bool { _long }
-            \int_compare:nNnF \l_@@_mandatory_args_int > \c_zero
+            \int_compare:nNnF \l_@@_mandatory_args_int > 0
               { _trailing }
             :w
           }
@@ -3197,7 +3197,7 @@
 \cs_new_protected:Npx \@@_grab_v_bgroup:
   {
     \exp_not:N \@@_grab_v_aux_catcodes:
-    \exp_not:n { \int_set_eq:NN \l_@@_v_nesting_int \c_one }
+    \exp_not:n { \int_set:Nn \l_@@_v_nesting_int { 1 } }
     \exp_not:N \@@_grab_v_aux_put:N \iow_char:N \{
     \exp_not:N \@@_grab_v_bgroup_loop:
   }
@@ -3214,7 +3214,7 @@
         \token_if_eq_charcode:NNTF \c_group_end_token #1
           {
             \int_decr:N \l_@@_v_nesting_int
-            \int_compare:nNnTF \l_@@_v_nesting_int > \c_zero
+            \int_compare:nNnTF \l_@@_v_nesting_int > 0
               {
                 \@@_grab_v_aux_put:N #1
                 \@@_grab_v_bgroup_loop:
@@ -3789,27 +3789,27 @@
   }
 \cs_new_protected:Npn \@@_split_argument_aux:nnnn #1#2#3#4
   {
-    \int_compare:nNnF {#1} = { #2 + \c_one }
+    \int_compare:nNnF {#1} = { #2 + 1 }
       {
-        \int_compare:nNnTF {#1} > { #2 + \c_one }
+        \int_compare:nNnTF {#1} > { #2 + 1 }
           {
             \tl_set:Nx \ProcessedArgument
               {
                 \exp_last_unbraced:NnNo
                   \@@_split_argument_aux:n
-                  { #2 + \c_one }
+                  { #2 + 1 }
                   \use_none_delimit_by_q_stop:w
                   \ProcessedArgument
                   \q_stop
               }
             \__msg_kernel_error:nnxxx { xparse } { split-excess-tokens }
-              { \tl_to_str:n {#3} } { \int_eval:n { #2 + \c_one } }
+              { \tl_to_str:n {#3} } { \int_eval:n { #2 + 1 } }
               { \tl_to_str:n {#4} }
           }
           {
             \tl_put_right:Nx \ProcessedArgument
               {
-                \prg_replicate:nn { #2 + \c_one - (#1) }
+                \prg_replicate:nn { #2 + 1 - (#1) }
                   { { \exp_not:V \c_@@_no_value_tl } }
               }
           }
