--- a/l3packages/xtemplate/xtemplate.dtx
+++ b/l3packages/xtemplate/xtemplate.dtx
@@ -1123,7 +1123,7 @@
 \cs_new_protected:Npn \@@_declare_object_type:nn #1#2
   {
     \int_set:Nn \l_@@_tmp_int {#2}
-    \int_compare:nTF { \c_zero <= \l_@@_tmp_int <= \c_nine }
+    \int_compare:nTF { 0 <= \l_@@_tmp_int <= 9 }
       {
         \msg_info:nnxx { xtemplate } { declare-object-type }
           {#1} { \exp_not:V \l_@@_tmp_int }
