--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -196,7 +196,7 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \@@_if_digit:N #1 { TF }
   {
-    \if_int_compare:w \c_nine < 1 #1 \exp_stop_f:
+    \if_int_compare:w 9 < 1 #1 \exp_stop_f:
       \prg_return_true: \else: \prg_return_false: \fi:
   }
 %    \end{macrocode}
@@ -385,9 +385,9 @@
       {
         \prg_replicate:nn
           {
-            \int_max:nn \c_zero
-              { #3 - \__str_count:n { #2 #1 } - \c_one }
-            / \c_two
+            \int_max:nn { 0 }
+              { #3 - \__str_count:n { #2 #1 } - 1 }
+            / 2
           }
           {#4}
       }
@@ -395,9 +395,9 @@
       {
         \prg_replicate:nn
           {
-            \int_max:nn \c_zero
+            \int_max:nn { 0 }
               { #3 - \__str_count:n { #2 #1 } }
-            / \c_two
+            / 2
           }
           {#4}
       }
@@ -632,7 +632,7 @@
     \token_if_eq_charcode:NNTF #2 ?
       { \@@_put:nw { #1 > } }
       { \@@_put:nw { #1 #2 } }
-    \int_compare:nNnTF {#7} < \c_zero
+    \int_compare:nNnTF {#7} < 0
       { \@@_put:nw { - } }
       {
         \str_case:nnF {#3}
@@ -831,9 +831,9 @@
   {
     \@@_put:fw { \int_eval:n { #3 - 1 } }
     \@@_put:nw { e }
-    \int_compare:nNnTF {#8} > \c_sixteen
+    \int_compare:nNnTF {#8} > \c__fp_prec_int
       {
-        \@@_put:fw { \prg_replicate:nn { #8 - \c_fifteen } {0} }
+        \@@_put:fw { \prg_replicate:nn { #8 - \c__fp_prec_int + 1 } {0} }
         \@@_put:fw { \use_none:n #4#5#6#7 }
       }
       {
