--- a/l3experimental/l3str/l3tl-build.dtx
+++ b/l3experimental/l3str/l3tl-build.dtx
@@ -208,7 +208,7 @@
     \fi:
     \tex_the:D \tex_toks:D #1 \exp_stop_f:
     \exp_after:wN \@@_unpack_loop:w
-      \int_use:N \__int_eval:w #1 + \c_one ;
+      \int_use:N \__int_eval:w #1 + 1 ;
   }
 %    \end{macrocode}
 % \end{macro}
@@ -278,7 +278,7 @@
 \cs_new_protected:Npn \@@_one:n #1
   {
     \tex_toks:D \l_@@_index_int {#1}
-    \tex_advance:D \l_@@_index_int \c_one
+    \int_incr:N \l_@@_index_int
     \if_int_compare:w \l_@@_index_int > \c_max_register_int
       \@@_unpack:
       \l_@@_index_int \l_@@_start_index_int
@@ -287,7 +287,7 @@
 \cs_new_protected:Npn \@@_one:o #1
   {
     \tex_toks:D \l_@@_index_int \exp_after:wN {#1}
-    \tex_advance:D \l_@@_index_int \c_one
+    \int_incr:N \l_@@_index_int
     \if_int_compare:w \l_@@_index_int > \c_max_register_int
       \@@_unpack:
       \l_@@_index_int \l_@@_start_index_int
