Re-write l3alloc
This is part of preparation for some other format-mode changes but
also pulls l3alloc more into line with LaTeX2e.

Whilst in principle we have a free, in many ways it makes sense
to stick to the plain TeX numbering for tracking here. In particular,
later check-ins will deal with some issues related to LuaTeX where
access from the 'Lua side' does need an amount of insight into the
low-level setup.

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1013,19 +1013,11 @@
 % \subsection{Integer expressions}
 %
 % \begin{macro}{\int_eval:n}
-%   Wrapper for \cs{@@_eval:w}. Can be used in an integer expression
-%   or directly in the input stream. In format mode, there is already
-%   a definition in \pkg{l3alloc} for bootstrapping, which is therefore
-%   corrected to the \enquote{real} version here.
+%   Wrapper for \cs{@@_eval:w}: can be used in an integer expression
+%   or directly in the input stream.
 %    \begin{macrocode}
-%<*initex>
-\cs_set:Npn \int_eval:n #1
-  { \@@_value:w \@@_eval:w #1 \@@_eval_end: }
-%</initex>
-%<*package>
 \cs_new:Npn \int_eval:n #1
   { \@@_value:w \@@_eval:w #1 \@@_eval_end: }
-%</package>
 %    \end{macrocode}
 % \end{macro}
 %
