Switch to luaotfload in format mode
As LaTeX2e has gone this way it makes sense and means we can
potentially load a full family of fonts in format mode without
messing about. This also means some generic Lua is available which
may be useful.

Note that the font loading itself probably needs a little work: we
now can do things 'properly' or at least as well as 2e can do them,
just need to set up a bit more of the mechanisms.

--- a/l3kernel/l3alloc.dtx
+++ b/l3kernel/l3alloc.dtx
@@ -116,6 +116,30 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}
+%   {
+%     \e@alloc@attribute@count ,
+%     \e@alloc@whatsit@count   ,
+%     \e@alloc@bytecode@count  ,
+%     \e@alloc@luachunk@count
+%   }
+%   To allow \LuaTeX{} to load |ltluatex.lua| for generic \Lua{} support, a
+%   small number of counts have to be correctly named at the \TeX{} level.
+%   At present there are no \pkg{expl3} allocators for these concepts so the
+%   numbers, \emph{etc.}, may well change here.
+%    \begin{macrocode}
+\etex_ifdefined:D \luatex_luatexversion:D
+  \group_begin:
+    \tex_catcode:D `\@ = 11 ~
+    \tex_global:D \tex_countdef:D \e@alloc@attribute@count = 21 ~
+    \tex_global:D \tex_countdef:D \e@alloc@whatsit@count   = 22 ~
+    \tex_global:D \tex_countdef:D \e@alloc@bytecode@count  = 23 ~
+    \tex_global:D \tex_countdef:D \e@alloc@luachunk@count  = 24 ~
+  \group_end:
+\tex_fi:D
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}
 %   {\box_new:N, \dim_new:N, \int_new:N, \muskip_new:N \skip_new:N}
 %   Each of the public allocators is a wrapper around the one internal
