ltluatex now parameterises some variables
This avoids needing to use 2e-style names for this L3 code:
needs a just-updated ltluatex!

--- a/l3kernel/l3luatex.dtx
+++ b/l3kernel/l3luatex.dtx
@@ -286,6 +286,10 @@ l3kernel.charcat = charcat
 % A small amount of generic code is used by almost all \LuaTeX{} material so
 % needs to be loaded by the format.
 %    \begin{macrocode}
+local attribute_count_name = "g__alloc_attribute_int"
+local bytecode_count_name  = "g__alloc_bytecode_int"
+local chunkname_count_name = "g__alloc_chunkname_int"
+local whatsit_count_name   = "g__alloc_whatsit_int"
 require("ltluatex")
 %    \end{macrocode}
 %
