--- a/l3kernel/l3alloc.dtx
+++ b/l3kernel/l3alloc.dtx
@@ -118,24 +118,21 @@
 %
 % \begin{variable}
 %   {
-%     \e@alloc@attribute@count ,
-%     \e@alloc@whatsit@count   ,
-%     \e@alloc@bytecode@count  ,
-%     \e@alloc@luachunk@count
+%     \g_@@_attribute_int ,
+%     \g_@@_bytecode_int  ,
+%     \g_@@_chunkname_int ,
+%     \g_@@_whatsit_int
 %   }
 %   To allow \LuaTeX{} to load |ltluatex.lua| for generic \Lua{} support, a
 %   small number of counts have to be correctly named at the \TeX{} level.
 %   At present there are no \pkg{expl3} allocators for these concepts so the
-%   numbers, \emph{etc.}, may well change here.
+%   names and numbers of the tracking variables may change.
 %    \begin{macrocode}
 \etex_ifdefined:D \luatex_luatexversion:D
-  \group_begin:
-    \tex_catcode:D `\@ = 11 ~
-    \tex_global:D \tex_countdef:D \e@alloc@attribute@count = 21 ~
-    \tex_global:D \tex_countdef:D \e@alloc@whatsit@count   = 22 ~
-    \tex_global:D \tex_countdef:D \e@alloc@bytecode@count  = 23 ~
-    \tex_global:D \tex_countdef:D \e@alloc@luachunk@count  = 24 ~
-  \group_end:
+  \tex_global:D \tex_countdef:D \g_@@_attribute_int = 21 ~
+  \tex_global:D \tex_countdef:D \g_@@_bytecode_int   = 22 ~
+  \tex_global:D \tex_countdef:D \g_@@_chunkname_int  = 23 ~
+  \tex_global:D \tex_countdef:D \g_@@_whatsit_int  = 24 ~
 \tex_fi:D
 %    \end{macrocode}
 % \end{variable}
