--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3drivers.dtx Copyright(C) 2011-2016 The LaTeX3 Project
+%% File: l3drivers.dtx Copyright(C) 2011-2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -420,7 +420,7 @@
 %
 % \subsection{Inserting \TeX{} material}
 %
-% \begin{function}{\__driver_draw_hbox:nnnnnn}
+% \begin{function}{\__driver_draw_hbox:Nnnnnnn}
 %   \begin{syntax}
 %     \cs{__driver_draw_hbox:Nnnnnnn} \meta{box}
 %       \Arg{a} \Arg{b} \Arg{c} \Arg{d} \Arg{x} \Arg{y}
