Stray \end{macro}
... plus wrap a line.

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -4351,7 +4351,8 @@
 % \end{macro}
 %
 % \begin{macro}{\tl_range:Nnn, \tl_range:cnn, \tl_range:nnn}
-% \begin{macro}[aux]{\@@_range:nnnw, \@@_range:nnw, \@@_range_normalize:nn, \@@_range_collect:w, \@@_range_skip:w}
+% \begin{macro}[aux]
+%   {\@@_range:nnnw, \@@_range:nnw, \@@_range_normalize:nn, \@@_range_collect:w, \@@_range_skip:w}
 %   To avoid checking for the end of the token list at every step, start
 %   by counting the number $l$ of items and \enquote{normalizing} the
 %   bounds, namely clamping them to the interval $[0,l]$ and dealing
@@ -4417,7 +4418,6 @@
     { #2 {#3} }
   }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \begin{macro}[EXP, aux]{\@@_range_normalize:nn}
