New LuaTeX primitives: v1.0.4

--- a/l3kernel/l3names.dtx
+++ b/l3kernel/l3names.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3names.dtx Copyright (C) 1990-2016 The LaTeX3 project
+%% File: l3names.dtx Copyright (C) 1990-2017 The LaTeX3 project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -821,6 +821,7 @@
   \__kernel_primitive:NN \mathrulesfam                \luatex_mathrulesfam:D
   \__kernel_primitive:NN \mathscriptsmode             \luatex_mathscriptsmode:D
   \__kernel_primitive:NN \mathstyle                   \luatex_mathstyle:D
+  \__kernel_primitive:NN \mathsurroundmode            \luatex_mathsurroundmode:D
   \__kernel_primitive:NN \mathsurroundskip            \luatex_mathsurroundskip:D
   \__kernel_primitive:NN \nohrule                     \luatex_nohrule:D
   \__kernel_primitive:NN \nokerns                     \luatex_nokerns:D
@@ -836,6 +837,7 @@
   \__kernel_primitive:NN \postexhyphenchar            \luatex_postexhyphenchar:D
   \__kernel_primitive:NN \posthyphenchar              \luatex_posthyphenchar:D
   \__kernel_primitive:NN \preexhyphenchar             \luatex_preexhyphenchar:D
+  \__kernel_primitive:NN \predisplaygapfactor         \luatex_predisplaygapfactor:D
   \__kernel_primitive:NN \prehyphenchar               \luatex_prehyphenchar:D
   \__kernel_primitive:NN \savecatcodetable            \luatex_savecatcodetable:D
   \__kernel_primitive:NN \scantextokens               \luatex_scantextokens:D
