Remove use of named integers everywhere

--- a/l3trial/l3fp-extras/l3fp-types.dtx
+++ b/l3trial/l3fp-extras/l3fp-types.dtx
@@ -1,38 +1,24 @@
 % \iffalse
 %
-%% File l3fp-types.dtx (C) Copyright 2012 The LaTeX3 Project
-%%
-%% It may be distributed and/or modified under the conditions of the
-%% LaTeX Project Public License (LPPL), either version 1.3c of this
-%% license or (at your option) any later version.  The latest version
-%% of this license is in the file
-%%
-%%    http://www.latex-project.org/lppl.txt
-%%
-%% This file is part of the "l3trial bundle" (The Work in LPPL)
-%% and all files in that bundle must be distributed together.
-%%
-%% The released version of this bundle is available from CTAN.
-%%
-%% -----------------------------------------------------------------------
-%%
-%% The development version of the bundle can be found at
-%%
-%%    http://www.latex-project.org/svnroot/experimental/trunk/
-%%
-%% for those people who are interested.
-%%
-%%%%%%%%%%%
-%% NOTE: %%
-%%%%%%%%%%%
-%%
-%%   Snapshots taken from the repository represent work in progress and may
-%%   not work or may contain conflicting material!  We therefore ask
-%%   people _not_ to put them into distributions, archives, etc. without
-%%   prior consultation with the LaTeX Project Team.
-%%
-%% -----------------------------------------------------------------------
-%%
+%% File l3fp-types.dtx (C) Copyright 2012,2017 The LaTeX3 Project
+%
+% It may be distributed and/or modified under the conditions of the
+% LaTeX Project Public License (LPPL), either version 1.3c of this
+% license or (at your option) any later version.  The latest version
+% of this license is in the file
+%
+%    http://www.latex-project.org/lppl.txt
+%
+% This file is part of the "l3trial bundle" (The Work in LPPL)
+% and all files in that bundle must be distributed together.
+%
+% -----------------------------------------------------------------------
+%
+% The development version of the bundle can be found at
+%
+%    https://github.com/latex3/latex3
+%
+% for those people who are interested.
 %
 %<*driver|package>
 \RequirePackage{expl3}
@@ -139,7 +125,7 @@
 % \begin{macro}[EXP, aux]{\@@_parse_prefix_-:Nw, \@@_parse_prefix_!:Nw}
 %   The unary~|-| and boolean not are harder than the unary~|+|: we
 %   parse the operand using a precedence equal to the maximum of the
-%   previous precedence~|##1| and the precedence \cs{c_twelve} of the
+%   previous precedence~|##1| and the precedence \cs{c_@@_prec_not_int} of the
 %   unary operator, then call the appropriate
 %   |\__fp_|\meta{operation}\meta{type}|_o:w| function, where the
 %   \meta{type} is extracted by \cs{@@_parse_unary_type:N} and the
@@ -163,8 +149,8 @@
         \@@_parse_expand:w
       }
   }
-\@@_tmp:w - \c_twelve { set_sign } 2
-\@@_tmp:w ! \c_twelve { not } ?
+\@@_tmp:w - \c_@@_prec_not_int { set_sign } 2
+\@@_tmp:w ! \c_@@_prec_not_int { not } ?
 %    \end{macrocode}
 % \end{macro}
 %
@@ -182,7 +168,7 @@
     \exp_after:wN #2
     \cs:w @@_ #1 \exp_after:wN \@@_parse_unary_type:N
     \exp:w
-    \@@_parse_operand:Nw \c_fifteen \@@_parse_expand:w
+    \@@_parse_operand:Nw \c_@@_prec_func_int \@@_parse_expand:w
   }
 %    \end{macrocode}
 % \end{macro}
