--- a/l3trial/xfont/l3font.dtx
+++ b/l3trial/xfont/l3font.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File: l3font.dtx Copyright (C) 2011,2012,2015,2016 LaTeX3 project
+%% File: l3font.dtx Copyright (C) 2011,2012,2015-2017 LaTeX3 project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -437,17 +437,17 @@
 \sys_if_engine_luatex:TF
   {
     \cs_new_protected:Npn \font_suppress_not_found_error:
-      { \luatexsuppressfontnotfounderror = \c_one }
+      { \int_set:Nn \luatexsuppressfontnotfounderror { 1 } }
     \cs_new_protected:Npn \font_enable_not_found_error:
-      { \luatexsuppressfontnotfounderror = \c_zero }
+      { \int_set:Nn \luatexsuppressfontnotfounderror { 0 } }
   }
   {
     \sys_if_engine_xetex:TF
       {
         \cs_new_protected:Npn \font_suppress_not_found_error:
-          { \suppressfontnotfounderror = \c_one }
+          { \int_set:Nn \suppressfontnotfounderror { 1 } }
         \cs_new_protected:Npn \font_enable_not_found_error:
-          { \suppressfontnotfounderror = \c_zero }
+          { \int_set:Nn \suppressfontnotfounderror { 0 } }
       }
       {
         \cs_new_protected:Npn \font_suppress_not_found_error:
