--- a/l3trial/l3auxdata/l3auxdata.dtx
+++ b/l3trial/l3auxdata/l3auxdata.dtx
@@ -6,7 +6,7 @@
 %<*ins>
 \iffalse meta-comment
 
-File l3auxdata.ins Copyright (C) 2014 The LaTeX3 Project
+File l3auxdata.ins Copyright (C) 2014,2017 The LaTeX3 Project
 
 It may be distributed and/or modified under the conditions of the
 LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -709,7 +709,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
 %    \begin{macrocode}
 \cs_new:Npn \@@_iow_count_avail:
   {
-    \int_eval:n { \c_sixteen - \count17 } % 2e only!!
+    \int_eval:n { 16 - \count17 } % 2e only!!
   }
 %    \end{macrocode}
 % \end{macro}
@@ -721,7 +721,7 @@ Don't~ look~ here:~ check~ your~ console~ output!
     \int_eval:n
       { 0 \prop_map_inline:NN #1 \@@_prop_count:nn }
   }
-\cs_new:Nn \@@_prop_count:nn { + \c_one }
+\cs_new:Nn \@@_prop_count:nn { + 1 }
 %    \end{macrocode}
 % \end{macro}
 %
