--- a/l3trial/l3benchmark/l3benchmark.dtx
+++ b/l3trial/l3benchmark/l3benchmark.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3benchmark.dtx Copyright (C) 2011,2012,2014,2016 The LaTeX3 Project
+%% File l3benchmark.dtx Copyright (C) 2011,2012,2014,2016,2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -155,7 +155,7 @@
   {
     \cs_if_exist:NTF \shellescape
       {
-        \int_compare:nNnF \shellescape = \c_one
+        \int_compare:nNnF \shellescape = 1
           { \bool_set_true:N \l_benchmark_time_fail_bool }
       }
       { \bool_set_true:N \l_benchmark_time_fail_bool }
@@ -185,7 +185,7 @@
     \cs_new_protected:Npn \benchmark_display:n #1
       { \iow_term:x { \tl_to_str:n {#1} ~ seconds } }
     \fp_new:N \l_benchmark_duration_fp
-    \fp_set_eq:NN \l_benchmark_duration_fp \c_one_fp
+    \fp_set:Nn \l_benchmark_duration_fp { 1 }
     \msg_critical:nn { benchmark } { no-time }
   }
 %    \end{macrocode}
@@ -374,7 +374,7 @@
 %   seconds, unless one iteration of the code takes longer.
 %    \begin{macrocode}
 \fp_new:N \l_benchmark_duration_fp
-\fp_set_eq:NN \l_benchmark_duration_fp \c_one_fp
+\fp_set:Nn \l_benchmark_duration_fp { 1 }
 %    \end{macrocode}
 % \end{variable}
 %
@@ -438,7 +438,7 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \benchmark:n #1
   {
-    \int_set_eq:NN \l_@@_repeat_int \c_one
+    \int_set:Nn \l_@@_repeat_int { 1 }
     \@@_raw:n {#1}
     \bool_while_do:nn
       {
