--- a/l3trial/l3fp-extras/l3fp-functions.dtx
+++ b/l3trial/l3fp-extras/l3fp-functions.dtx
@@ -1,38 +1,24 @@
 % \iffalse
 %
-%% File l3fp-functions.dtx (C) Copyright 2012-2016 The LaTeX3 Project
-%%
-%% It may be distributed and/or modified under the conditions of the
-%% LaTeX Project Public License (LPPL), either version 1.3c of this
-%% license or (at your option) any later version.  The latest version
-%% of this license is in the file
-%%
-%%    http://www.latex-project.org/lppl.txt
-%%
-%% This file is part of the "l3trial bundle" (The Work in LPPL)
-%% and all files in that bundle must be distributed together.
-%%
-%% The released version of this bundle is available from CTAN.
-%%
-%% -----------------------------------------------------------------------
-%%
-%% The development version of the bundle can be found at
-%%
-%%    http://www.latex-project.org/svnroot/experimental/trunk/
-%%
-%% for those people who are interested.
-%%
-%%%%%%%%%%%
-%% NOTE: %%
-%%%%%%%%%%%
-%%
-%%   Snapshots taken from the repository represent work in progress and may
-%%   not work or may contain conflicting material!  We therefore ask
-%%   people _not_ to put them into distributions, archives, etc. without
-%%   prior consultation with the LaTeX Project Team.
-%%
-%% -----------------------------------------------------------------------
-%%
+%% File l3fp-functions.dtx (C) Copyright 2012-2017 The LaTeX3 Project
+%
+% It may be distributed and/or modified under the conditions of the
+% LaTeX Project Public License (LPPL), either version 1.3c of this
+% license or (at your option) any later version.  The latest version
+% of this license is in the file
+%
+%    http://www.latex-project.org/lppl.txt
+%
+% This file is part of the "l3trial bundle" (The Work in LPPL)
+% and all files in that bundle must be distributed together.
+%
+% -----------------------------------------------------------------------
+%
+% The development version of the bundle can be found at
+%
+%    https://github.com/latex3/latex3
+%
+% for those people who are interested.
 %
 %<*driver|package>
 \RequirePackage{expl3}
@@ -258,13 +244,13 @@
     \if_meaning:w @ #2
       \exp_after:wN \@@_function_arg_few:w
     \fi:
-    \if_int_compare:w #1 = \c_one
+    \if_int_compare:w #1 = 1 \exp_stop_f:
       \exp_after:wN \@@_function_arg_get:w
     \fi:
     \@@_use_i_until_s:nw
       {
         \exp_after:wN \@@_function_arg_o:w
-        \__int_value:w \__int_eval:w #1 - \c_one .
+        \__int_value:w \__int_eval:w #1 - 1 .
       }
       #2
   }
