--- a/l3trial/l3ldb/l3ldb.dtx
+++ b/l3trial/l3ldb/l3ldb.dtx
@@ -1,7 +1,7 @@
 % \iffalse meta-comment
 %
 %% File l3ldb.dtx (C) Copyright 2011 Frank Mittelbach, the LaTeX3 Project
-%%                (C) Copyright 2012,2016 The LaTeX3 Project
+%%                (C) Copyright 2012,2016-2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -360,7 +360,7 @@
 %   is done by simply calling \cs{g_ldb_triples_tl} which contains a
 %   function in front of every triple so that we can safely proceed.
 %    \begin{macrocode}
-    \exp_after:wN \ldb_decide_root:nn \g_ldb_triples_tl \c_three \c_zero
+    \exp_after:wN \ldb_decide_root:nn \g_ldb_triples_tl \c__ldb_other_bdg \c__ldb_begin_type
 %<trace>    \show_ldb_entry:nnn {#1} {#2} {#3}
   }
 %    \end{macrocode}
@@ -371,8 +371,8 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \ldb_decide_root:nn #1#2
   {
-    \if_meaning:w #1 \c_zero
-      \if_meaning:w #2 \c_zero
+    \if_meaning:w #1 \c__ldb_sequenced_bdg
+      \if_meaning:w #2 \c__ldb_begin_type
         \tl_set:Nn \l_ldb_curr_node_tl { \g_ldb_begin_root_prop }
       \else:
         \tl_set:Nn \l_ldb_curr_node_tl { \g_ldb_end_root_prop }
@@ -1038,13 +1038,13 @@
 %    \begin{macrocode}
 \cs_new_protected:Npn \trace_ldb:x #1
   {
-    \if_int_compare:w \g_trace_ldb_status > \c_zero
+    \if_int_compare:w \g_trace_ldb_status > 0 \exp_stop_f:
       \iow_term:x { LDB:~ #1 }
     \fi:
   }
 \cs_new_protected:Npn \trace_ldb_internal:x #1
   {
-    \if_int_compare:w \g_trace_ldb_status > \c_one
+    \if_int_compare:w \g_trace_ldb_status > 1 \exp_stop_f:
       \iow_term:x { LDB:~ #1 }
     \fi:
   }
