--- a/l3trial/l3str-format-new/l3str-format-new.dtx
+++ b/l3trial/l3str-format-new/l3str-format-new.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3str-format-new.dtx (C) Copyright 2014-2016 The LaTeX3 Project
+%% File: l3str-format-new.dtx (C) Copyright 2014-2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -584,7 +584,7 @@
 \cs_new:cpn { @@ / width :nn } #1#2
   {
     \@@_val_set:ff { \str_head:n {#1} } { \int_eval:n {#2} }
-    \@@_val_do:fn { \str_head:n {#1} } \int_compare:nNnT < \c_zero
+    \@@_val_do:fn { \str_head:n {#1} } \int_compare:nNnT < 0
       {
         \@@_val_do:fn { \str_head:n {#1} }
           {
@@ -895,7 +895,7 @@
     \@@_align:f
       {
         \use:nf
-          { \int_compare:nNnTF {#5} > \c_zero { #2 . #3 } {#2} }
+          { \int_compare:nNnTF {#5} > 0 { #2 . #3 } {#2} }
           {
             \prg_replicate:nn
               { \int_max:nn { 0 } { #5 - \str_count:n {#3} } } { 0 }
@@ -942,7 +942,7 @@
   {
     \use:nf {#1}
       {
-        \int_compare:nNnT {#4} > \c_zero
+        \int_compare:nNnT {#4} > 0
           {
             \use:nf { . #2 }
               { \prg_replicate:nn { #4 - \str_count:n {#2} } {0} }
@@ -1023,7 +1023,7 @@
 %    \begin{macrocode}
 \prg_new_conditional:Npnn \@@_if_digit:N #1 { TF }
   {
-    \if_int_compare:w \c_nine < 1 #1 \exp_stop_f:
+    \if_int_compare:w 9 < 1 #1 \exp_stop_f:
       \prg_return_true: \else: \prg_return_false: \fi:
   }
 %    \end{macrocode}
@@ -1346,7 +1346,7 @@
     \token_if_eq_charcode:NNTF #2 ?
       { \@@_put:nw { #1 > } }
       { \@@_put:nw { #1 #2 } }
-    \int_compare:nNnTF {#7} < \c_zero
+    \int_compare:nNnTF {#7} < 0
       { \@@_put:nw { - } }
       {
         \str_case:nnF {#3}
