--- a/l3trial/l3tree/l3tree.dtx
+++ b/l3trial/l3tree/l3tree.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3tree.dtx (C) Copyright 2012,2016 The LaTeX3 Project
+%% File l3tree.dtx (C) Copyright 2012,2016-2017 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -318,10 +318,10 @@
     \if_hbox:N \l_tree_first_box
       \hbox_unpack_clear:N \l_tree_first_box
     \else:
-      \if_int_compare:w \tex_ht:D \l_tree_first_box = \c_zero
+      \if_int_compare:w \tex_ht:D \l_tree_first_box = 0 \exp_stop_f:
         \exp_after:wN \exp_after:wN \exp_after:wN \use_none:n
       \else:
-        \tex_advance:D \l_tree_index_int \c_one
+        \tex_advance:D \l_tree_index_int 1 \exp_stop_f:
         \tex_dimen:D \l_tree_index_int \tex_ht:D \l_tree_first_box
       \fi:
     \fi:
@@ -335,12 +335,12 @@
 %    \begin{macrocode}
 \cs_new:Npn \tree_extract_loop:w #1 ;
   {
-    \if_int_compare:w #1 = \c_zero
+    \if_int_compare:w #1 = 0 \exp_stop_f:
       \exp_after:wN \__prg_break:
     \fi:
     \exp_not:N \__seq_item:n { \__int_value:w \tex_dimen:D #1 }
     \exp_after:wN \tree_extract_loop:w
-      \__int_value:w \__int_eval:w #1 - \c_one ;
+      \__int_value:w \__int_eval:w #1 - 1 ;
   }
 %    \end{macrocode}
 % \end{macro}
