Only produce deprecation warning once for each deprecated command

--- a/l3kernel/l3file.dtx
+++ b/l3kernel/l3file.dtx
@@ -2091,6 +2091,7 @@
       { 2017-12-31 }
       { \token_to_str:N \ior_get_str:NN }
       { \token_to_str:N \ior_str_get:NN }
+    \cs_gset_eq:NN \ior_get_str:NN \ior_str_get:NN
     \ior_str_get:NN
   }
 %    \end{macrocode}
