--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -3002,6 +3002,7 @@
       { 2017-12-31 }
       { \token_to_str:N \tl_to_lowercase:n }
       { }
+    \cs_gset_eq:NN \tl_to_lowercase:n \tex_lowercase:D
     \tex_lowercase:D {#1}
   }
 \cs_new_protected:Npn \tl_to_uppercase:n #1
@@ -3010,6 +3011,7 @@
       { 2017-12-31 }
       { \token_to_str:N \tl_to_uppercase:n }
       { }
+    \cs_gset_eq:NN \tl_to_uppercase:n \tex_uppercase:D
     \tex_uppercase:D {#1}
   }
 %    \end{macrocode}
