--- a/l3kernel/l3msg.dtx
+++ b/l3kernel/l3msg.dtx
@@ -1875,7 +1875,7 @@
   }
 \@@_kernel_new:nnn { kernel } { deprecated-command }
   {
-    The~deprecated~command~'#2'~will~be~removed~on~#1.
+    The~deprecated~command~'#2'~has~been~or~will~be~removed~on~#1.
     \tl_if_empty:nF {#3} { ~Use~instead~'#3'. }
   }
 \@@_kernel_new:nnnn { kernel } { empty-search-pattern }
