--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -269,7 +269,7 @@
 %   This is a simple enough concept: the two views here are complementary.
 %    \begin{macrocode}
 \int_compare:nNnTF
-  { \cs_if_exist_use:NF \pdftex_pdfoutput:D \c_zero } > \c_zero
+  { \cs_if_exist_use:NF \pdftex_pdfoutput:D { 0 } } > { 0 }
   {
     \cs_new_eq:NN \sys_if_output_dvi:T  \use_none:n
     \cs_new_eq:NN \sys_if_output_dvi:F  \use:n
