Some more removals of integers

--- a/l3kernel/l3fp-aux.dtx
+++ b/l3kernel/l3fp-aux.dtx
@@ -784,7 +784,8 @@
 %   The arguments are as follows: |#1| indicates which function is
 %   being defined; after one step of expansion, |#2| yields the
 %   \enquote{extra digits} which are then converted by
-%   \cs{@@_round_digit:Nw} to the \meta{rounding} digit.
+%   \cs{@@_round_digit:Nw} to the \meta{rounding} digit (note the |+|
+%   separating blocks of digits to avoid overflowing \TeX{}'s integers).
 %   This triggers the \texttt{f}-expansion of
 %   \cs{@@_decimate_pack:nnnnnnnnnnw},\footnote{No, the argument
 %     spec is not a mistake: the function calls an auxiliary to
@@ -823,21 +824,7 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[EXP, aux]
-%   {\@@_round_digit:Nw, \@@_decimate_pack:nnnnnnnnnnw}
-%   %   ^^A \cs{@@_round_digit:Nw} moved to \pkg{l3fp-round}.
-%   \cs{@@_round_digit:Nw} will receive the \enquote{extra digits}
-%   as its argument, and its expansion is triggered by \cs{__int_value:w}.
-%   If the first digit is neither $0$ nor $5$, then it is the \meta{rounding}
-%   digit.  Otherwise, if the remaining digits are not all zero, we need
-%   to add $1$ to that leading digit to get the rounding digit. Some caution
-%   is required, though, because there may be more than $10$
-%   \enquote{extra digits}, and this may overflow \TeX{}'s integers.
-%   Instead of feeding the digits directly to \cs{@@_round_digit:Nw},
-%   they come split into several blocks, separated by $+$. Hence the first
-%   \cs{__int_eval:w} here.
-%    \begin{macrocode}
-%    \end{macrocode}
+% \begin{macro}[EXP, aux]{\@@_decimate_pack:nnnnnnnnnnw}
 %   The computation of the \meta{rounding} digit leaves an unfinished
 %   \cs{__int_value:w}, which expands the following functions. This
 %   allows us to repack nicely the digits we keep. Those digits come
