--- a/l3kernel/l3skip.dtx
+++ b/l3kernel/l3skip.dtx
@@ -1470,7 +1470,7 @@
       ##1 . ##2 \tl_to_str:n { pt }
   }
       {
-        \int_compare:nNnTF {#2} > \c_zero
+        \int_compare:nNnTF {#2} > { 0 }
           { #1 . #2 }
           { #1 }
       }
@@ -1699,7 +1699,7 @@
   {
     \if_int_compare:w
       \__str_if_eq_x:nn { \skip_eval:n { #1 } } { \skip_eval:n { #2 } }
-      = \c_zero
+      = 0 \exp_stop_f:
         \prg_return_true:
     \else:
         \prg_return_false:
