--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -84,7 +84,7 @@
 %   \end{texnote}
 % \end{variable}
 %
-% \subsection{Engine}
+% \section{Engine}
 %
 % \begin{function}[added = 2015-09-07, EXP, pTF]
 %   {
@@ -110,7 +110,7 @@
 %   |luatex|, |pdftex|, |ptex|, |uptex| or |xetex|.
 % \end{variable}
 %
-% \subsection{Output format}
+% \section{Output format}
 %
 % \begin{function}[added = 2015-09-19, EXP, pTF]
 %   {
