--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: xfpu.dtx (C) Copyright 2017 The LaTeX3 Project
+%% File: xfp.dtx (C) Copyright 2017 The LaTeX3 Project
 %
 % It may be distributed and/or modified under the conditions of the
 % LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -36,7 +36,7 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
-\def\ExplFileName{xfpu}
+\def\ExplFileName{xfp}
 \def\ExplFileDescription{LaTeX Floating Point Unit}
 \def\ExplFileDate{2017/02/10}
 \def\ExplFileVersion{6878}
@@ -53,7 +53,7 @@
 % \providecommand\nan{\texttt{NaN}}
 %
 % \title{^^A
-%   The \textsf{xfpu} package\\Floating Point Unit^^A
+%   The \textsf{xfp} package\\Floating Point Unit^^A
 %   \thanks{This file describes v\ExplFileVersion,
 %     last revised \ExplFileDate.}^^A
 % }
