Load xparse in xfp

--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -36,6 +36,7 @@
 %<package>      }%
 %<package>    \endinput
 %<package>  }
+%<package>\RequirePackage{xparse}
 \def\ExplFileName{xfp}
 \def\ExplFileDescription{LaTeX Floating Point Unit}
 \def\ExplFileDate{2017/03/07}
