--- a/l3packages/xfp/xfp.dtx
+++ b/l3packages/xfp/xfp.dtx
@@ -93,7 +93,8 @@
 %   \item Comparison operators: $x\mathop{\mathtt{<}}y$,
 %     $x\mathop{\mathtt{<=}}y$, $x\mathop{\mathtt{>?}}y$,
 %     $x\mathop{\mathtt{!=}}y$ \emph{etc.}
-%   \item Boolean logic: negation $\mathop{!}x$, conjunction
+%   \item Boolean logic: sign $\operatorname{sign} x$,
+%     negation $\mathop{!}x$, conjunction
 %     $x\mathop{\&\&}y$, disjunction $x\mathop{\vert\vert}y$, ternary
 %     operator $x\mathop{?}y\mathop{:}z$.
 %   \item Exponentials: $\exp x$, $\ln x$, $x^y$.
